welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:9: error: ')' expected but '<-' found.
  }while (compteur <- 1 to 5)
                   ^