welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
do{
  
  do {
    var baggle=0
  	if (estSurBiscuit())
    	baggle=baggle+1
    avance()
  	
  }while (compteur <- 1 to 5)
  
  
  	if (baggle<=2)
  		droite()
  
  	if (baggle>=2)
  		gauche()
 
  
  
  
  
  
  
  
  
  
} while(!sortieTrouvee())